Fixed a bug that was overscrolling the background on iOS throwing errors and making the canvas disappear

--- a/game.css
+++ b/game.css
@@ -28,7 +28,7 @@
 	margin-bottom: auto;
 	margin-top: 100px;
 	margin-left:200px;
-	margin-right:60px;
+	margin-right:50px;
 	overflow: hidden;
 	padding: 0px;
 	text-align: center;
